--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -1,6 +1,7 @@
 [CENTRALIZED]
 urlGetListingLatest = https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest
 urlGetQuote = https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest?symbol=BTC&convert=USD
+urlGetBTCQuote = https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest?id=1
 urlGetTokenByBaseAssetContractAddress = https://pro-api.coinmarketcap.com/v4/dex/spot-pairs/latest?network_id=16&base_asset_contract_address=
 serverUrl = http://localhost:5010/swap
 table_name_buy = buy_dex
