--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -6,8 +6,10 @@ urlGetTokenByBaseAssetContractAddress = https://pro-api.coinmarketcap.com/v4/dex
 serverUrl = http://localhost:5010/swap
 table_name_buy = buy_dex
 table_name_top10 = top10
-SCHEDULER_EXECUTION = 60
-SWAP_EXECUTION = 10
+SCHEDULER_EXECUTION_BTC_QUOTE = 15
+SCHEDULER_EXECUTION_SELL = 30
+SCHEDULER_EXECUTION_BUY = 60
+SWAP_EXECUTION = 20
 PERCENTAGE_LOSS = 10
 NUM_TOKENS_PROCESSED = 10
 NUM_TOKENS_COINMARKETCAP = 300
