--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -9,8 +9,9 @@ table_name_top10 = top10
 SCHEDULER_EXECUTION_BTC_QUOTE = 15
 SCHEDULER_EXECUTION_SELL = 30
 SCHEDULER_EXECUTION_BUY = 60
-SWAP_EXECUTION = 10
+SWAP_EXECUTION = 20
 PERCENTAGE_LOSS = -10
 NUM_TOKENS_PROCESSED = 10
 NUM_TOKENS_COINMARKETCAP = 300
 BTC_1H_PERCENT = -10
+BUY_VALUE_IN_USD = 100
