--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -1,17 +1,18 @@
 [CENTRALIZED]
-urlGetListingLatest = https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest
-urlGetQuote = https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest?symbol=BTC&convert=USD
-urlGetBTCQuote = https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest?id=1
-urlGetTokenByBaseAssetContractAddress = https://pro-api.coinmarketcap.com/v4/dex/spot-pairs/latest?network_id=16&base_asset_contract_address=
-serverUrl = http://localhost:5010/swap
+urlgetlistinglatest = https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest
+urlgetquote = https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest?symbol=BTC&convert=USD
+urlgetbtcquote = https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest?id=1
+urlgettokenbybaseassetcontractaddress = https://pro-api.coinmarketcap.com/v4/dex/spot-pairs/latest?network_id=16&base_asset_contract_address=
+serverurl = http://localhost:5010/swap
 table_name_buy = buy_dex
 table_name_top10 = top10
-SCHEDULER_EXECUTION_BTC_QUOTE = 15
-SCHEDULER_EXECUTION_SELL = 30
-SCHEDULER_EXECUTION_BUY = 60
-SWAP_EXECUTION = 20
-PERCENTAGE_LOSS = -10
-NUM_TOKENS_PROCESSED = 10
-NUM_TOKENS_COINMARKETCAP = 300
-BTC_1H_PERCENT = -10
-BUY_VALUE_IN_USD = 100
+scheduler_execution_btc_quote = 15
+scheduler_execution_sell = 30
+scheduler_execution_buy = 60
+swap_execution = 20
+percentage_loss = -10
+num_tokens_processed = 10
+num_tokens_coinmarketcap = 300
+btc_1h_percent = -10
+buy_value_in_usd = 100
+
