--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -7,12 +7,12 @@ serverurl = http://localhost:5010/swap
 table_name_buy = buy_dex
 table_name_top10 = top10
 scheduler_execution_btc_quote = 1
-scheduler_execution_sell = 3
-scheduler_execution_buy = 3
-swap_execution = 10
-percentage_loss = 0
-num_tokens_processed = 10
+scheduler_execution_sell = 4
+scheduler_execution_buy = 5
+swap_execution = 20
+get_token_metrics = 3
+num_tokens_processed = 3
 num_tokens_coinmarketcap = 300
-btc_1h_percent = -10
 buy_value_in_usd = 123
-
+btc_1h_percent = -10
+percentage_loss = 0
