--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -6,13 +6,16 @@ urlgettokenbybaseassetcontractaddress = https://pro-api.coinmarketcap.com/v4/dex
 serverurl = http://localhost:5010/swap
 table_name_buy = buy_dex
 table_name_top10 = top10
+execute_schedulers = 1
+execute_operations = 0
 scheduler_execution_btc_quote = 1
-scheduler_execution_sell = 2
-scheduler_execution_buy = 2
+scheduler_execution_sell = 1
+scheduler_execution_buy = 1
 swap_execution = 20
 get_token_metrics = 3
-num_tokens_processed = 3
+num_tokens_processed = 10
 num_tokens_coinmarketcap = 300
-buy_value_in_usd = 123
+buy_value_in_usd = 1001
 btc_1h_percent = -10
-percentage_loss = 0
+percentage_loss = -10
+
