--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -12,7 +12,7 @@ scheduler_execution_btc_quote = 1
 scheduler_execution_sell = 1
 scheduler_execution_buy = 1
 swap_execution = 20
-get_token_metrics = 3
+pause_token_metrics = 1
 num_tokens_processed = 10
 num_tokens_coinmarketcap = 300
 buy_value_in_usd = 1001
