--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -6,16 +6,18 @@ urlgettokenbybaseassetcontractaddress = https://pro-api.coinmarketcap.com/v4/dex
 serverurl = http://localhost:5010/swap
 table_name_buy = buy_dex
 table_name_top10 = top10
-scheduler_execution_btc_quote = 45
-scheduler_execution_sell = 60
-scheduler_execution_buy = 120
+scheduler_execution_btc_quote = 15
+scheduler_execution_sell = 30
+scheduler_execution_buy = 60
 swap_execution = 20
 pause_token_metrics = 1
 num_tokens_processed = 10
-num_tokens_coinmarketcap = 100
+num_tokens_coinmarketcap = 300
 buy_value_in_usd = 100
-btc_1h_percent = 0
-percentage_loss = -5
+btc_1h_percent = -10
+percentage_loss = -10
 execute_schedulers = 0
 execute_operations = 1
 add_repeated = 0
+execute_scheduler = 0
+
