--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -9,15 +9,19 @@ table_name_top10 = top10
 scheduler_execution_btc_quote = 15
 scheduler_execution_sell = 30
 scheduler_execution_buy = 60
-swap_execution = 20
+swap_execution = 10
 pause_token_metrics = 1
 num_tokens_processed = 10
 num_tokens_coinmarketcap = 300
-buy_value_in_usd = 100
+buy_value_in_usd = 1
 btc_1h_percent = -10
-percentage_loss = -10
+percentage_loss = 10
 execute_operations = 1
 add_repeated = 1
-execute_scheduler = 1
-execute_swap = 0
+execute_scheduler = 0
+execute_swap = true
+#localhost ou node_app
+node_url=https://localhost
+#localhost ou db
+db_url=localhost
 
