--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -19,7 +19,7 @@ percentage_loss = 10
 execute_operations = 1
 add_repeated = 1
 execute_scheduler = 0
-execute_swap = true
+execute_swap = false
 #localhost ou node_app
 node_url=https://localhost
 #localhost ou db
