--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -6,11 +6,13 @@ urlgettokenbybaseassetcontractaddress = https://pro-api.coinmarketcap.com/v4/dex
 serverurl = http://localhost:5010/swap
 table_name_buy = buy_dex
 table_name_top10 = top10
-scheduler_execution_btc_quote = 15
-scheduler_execution_sell = 30
-scheduler_execution_buy = 60
+#segundos ------------------------------
+scheduler_execution_btc_quote = 400
+scheduler_execution_sell = 120
+scheduler_execution_buy = 350
 swap_execution = 10
 pause_token_metrics = 1
+#---------------------------------------
 num_tokens_processed = 10
 num_tokens_coinmarketcap = 300
 buy_value_in_usd = 1
