--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -6,23 +6,24 @@ urlgettokenbybaseassetcontractaddress = https://pro-api.coinmarketcap.com/v4/dex
 serverurl = http://localhost:5010/swap
 table_name_buy = buy_dex
 table_name_top10 = top10
-#segundos ------------------------------
+#Intervalo de tempo em segundos ------------------------------
 scheduler_execution_btc_quote = 400
 scheduler_execution_sell = 120
 scheduler_execution_buy = 350
 swap_execution = 10
 pause_token_metrics = 1
-#---------------------------------------
+# auxiliares -------------------------------------------------
 num_tokens_processed = 10
 num_tokens_coinmarketcap = 300
 buy_value_in_usd = 1
 btc_1h_percent = -10
 percentage_loss = 10
+# controlo ---------------------------------------------------
 execute_operations = 1
 add_repeated = 1
-execute_scheduler = 0
-execute_swap = false
-#localhost ou node_app
+execute_scheduler = 1
+execute_swap = 0
+#localhost ou node_app ---------------------------------------
 node_url=https://localhost
 #localhost ou db
 db_url=localhost
