--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -2,6 +2,7 @@
 urlgetlistinglatest = https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest
 urlgetquote = https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest?symbol=BTC&convert=USD
 urlgetbtcquote = https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest?id=1
+urlspotpairs = https://pro-api.coinmarketcap.com/v4/dex/spot-pairs/latest?network_id=16&dex_slug=raydium&limit=100&quote_asset_contract_address=So11111111111111111111111111111111111111112
 urlgettokenbybaseassetcontractaddress = https://pro-api.coinmarketcap.com/v4/dex/spot-pairs/latest?network_id=16&dex_slug=raydium&quote_asset_contract_address=So11111111111111111111111111111111111111112&base_asset_contract_address=
 serverurl = http://localhost:5010/swap
 table_name_buy = buy_dex
@@ -22,7 +23,7 @@ percentage_loss = 10
 execute_operations = 1
 add_repeated = 0
 execute_scheduler = 0
-execute_swap = 1
+execute_swap = 0
 #localhost ou node_app ---------------------------------------
 node_url=https://localhost
 #localhost ou db
