--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -21,8 +21,8 @@ execute_operations = 1
 add_repeated = 0
 execute_scheduler = 1
 execute_swap = 1
-#localhost ou node_app ---------------------------------------
-node_url=https://localhost
+#https://localhost ou node_app ---------------------------------------
+node_url=node_app
 #localhost ou db
-db_url=localhost
+db_url=db
 
