--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -19,10 +19,10 @@ percentage_loss = -5
 # controlo ---------------------------------------------------
 execute_operations = 1
 add_repeated = 0
-execute_scheduler = 1
+execute_scheduler = 0
 execute_swap = 1
-#https://localhost ou node_app ---------------------------------------
-node_url=node_app
+#localhost ou node_app ---------------------------------------
+node_url=127.0.0.1
 #localhost ou db
-db_url=db
+db_url=localhost
 
