--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -21,8 +21,20 @@ execute_operations = 1
 add_repeated = 0
 execute_scheduler = 0
 execute_swap = 1
-#localhost ou node_app ---------------------------------------
-node_url=127.0.0.1
 #localhost ou db
 db_url=localhost
+
+
+#1. Modo HTTP (sem segurança):
+server_mode=http
+node_url=localhost
+
+#2. Modo Localhost (duas instâncias VSCode na mesma máquina Windows):
+#server_mode=localhost
+#node_url=localhost
+
+#3. Modo Docker (dois containers):
+#server_mode=docker
+#node_url=node_app  # ou IP/hostname entre containers
+
 
