--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -20,21 +20,27 @@ percentage_loss = -5
 execute_operations = 1
 add_repeated = 0
 execute_scheduler = 0
-execute_swap = 1
+execute_swap = 0
 #localhost ou db
-db_url=localhost
+db_url=db
 
 
 #1. Modo HTTP (sem segurança):
-server_mode=http
-node_url=localhost
+#server_mode=http
+#node_url=localhost
 
-#2. Modo Localhost (duas instâncias VSCode na mesma máquina Windows):
+#2. Docker se comunicando por HTTP (sem segurança)
+server_mode=docker_http
+node_url=node_app
+
+#3. Modo Localhost (duas instâncias VSCode na mesma máquina Windows):
 #server_mode=localhost
 #node_url=localhost
 
-#3. Modo Docker (dois containers):
+#4. Modo Docker (dois containers):
 #server_mode=docker
-#node_url=node_app  # ou IP/hostname entre containers
+#node_url=node_app
+
+
 
 
