--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -9,37 +9,40 @@ table_name_buy = buy_dex
 table_name_top10 = top10
 #Intervalo de tempo em segundos ------------------------------
 scheduler_execution_buy = 600
-swap_execution = 20
+swap_execution = 5
 # auxiliares -------------------------------------------------
-num_tokens_processed = 3
+num_tokens_processed = 10
 num_tokens_coinmarketcap = 300
 buy_value_in_usd = 1
-btc_1h_percent = 0
+btc_1h_percent = -10
 percentage_loss = -5
 # controlo ---------------------------------------------------
 execute_operations = 1
 add_repeated = 0
 execute_scheduler = 0
 execute_swap = 0
-#localhost ou db
-db_url=db
+
 
 
 #1. Modo HTTP (sem segurança):
 #server_mode=http
 #node_url=localhost
+#db_url=localhost
 
 #2. Docker se comunicando por HTTP (sem segurança)
-server_mode=docker_http
-node_url=node_app
+#server_mode=docker_http
+#node_url=node_app
+#db_url=db
 
 #3. Modo Localhost (duas instâncias VSCode na mesma máquina Windows):
-#server_mode=localhost
-#node_url=localhost
+server_mode=localhost
+node_url=localhost
+db_url=localhost
 
 #4. Modo Docker (dois containers):
 #server_mode=docker
 #node_url=node_app
+#db_url=db
 
 
 
