--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -8,13 +8,14 @@ serverurl = http://localhost:5010/swap
 table_name_buy = buy_dex
 table_name_top10 = top10
 #Intervalo de tempo em segundos ------------------------------
-scheduler_execution_buy = 600
-swap_execution = 5
+scheduler_execution_buy = 300
+swap_execution = 20
 # auxiliares -------------------------------------------------
-num_tokens_processed = 10
+num_tokens_processed = 5
 num_tokens_coinmarketcap = 300
 buy_value_in_usd = 1
-btc_1h_percent = -10
+name_main_token = Solana
+btc_1h_percent = 1
 percentage_loss = -5
 # controlo ---------------------------------------------------
 execute_operations = 1
