--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -10,6 +10,7 @@ table_name_top10 = top10
 #Intervalo de tempo em segundos ------------------------------
 scheduler_execution_buy = 300
 swap_execution = 20
+INIT_EXECUTION = 60
 # auxiliares -------------------------------------------------
 num_tokens_processed = 10
 num_tokens_coinmarketcap = 300
