--- a/config.centralized.properties
+++ b/config.centralized.properties
@@ -10,7 +10,7 @@ table_name_top10 = top10
 #Intervalo de tempo em segundos ------------------------------
 scheduler_execution_buy = 300
 swap_execution = 20
-INIT_EXECUTION = 60
+init_execution = 15
 # auxiliares -------------------------------------------------
 num_tokens_processed = 10
 num_tokens_coinmarketcap = 300
@@ -18,11 +18,12 @@ buy_value_in_usd = 1
 name_main_token = Solana
 btc_1h_percent = 1
 percentage_loss = -5
+get_pool_cache = 0
 # controlo ---------------------------------------------------
 execute_operations = 1
 add_repeated = 0
-execute_scheduler = 0
-execute_swap = 0
+execute_scheduler = 1
+execute_swap = 1
 
 
 
